<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.snomed.simplex</groupId>
		<artifactId>snomed-simplex-toolkit-parent</artifactId>
		<version>2.13.0-SNAPSHOT</version>
	</parent>

	<artifactId>snomed-simplex-toolkit</artifactId>
	<name>SNOMED Simplex Toolkit: API</name>

	<properties>
		<java.version>17</java.version>
		<packageName>snomed-simplex-toolkit</packageName>

		<langchain4j.version>1.4.0</langchain4j.version>

		<!-- BOM Overrides -->
		<spring.security.version>6.5.10</spring.security.version>
		<snomed-boot.version>5.6.0</snomed-boot.version>
	</properties>

	<dependencies>
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.data</groupId>
			<artifactId>spring-data-elasticsearch</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-core</artifactId>
			<version>${langchain4j.version}</version>
		</dependency>
		<dependency>
			<groupId>dev.langchain4j</groupId>
			<artifactId>langchain4j-open-ai</artifactId>
			<version>${langchain4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-jms</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-broker</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.apache.activemq</groupId>
					<artifactId>activemq-openwire-legacy</artifactId>
				</exclusion></exclusions>
		</dependency>

		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-to-slf4j</artifactId>
		</dependency>

		<!-- SNOMED International Single SignOn -->
		<dependency>
			<groupId>org.ihtsdo.otf</groupId>
			<artifactId>ihtsdo-spring-sso</artifactId>
				<exclusions>
					<exclusion>
						<groupId>org.apache.thrift</groupId>
						<artifactId>libthrift</artifactId>
					</exclusion>
				</exclusions>
		</dependency>

		<dependency>
			<groupId>org.ihtsdo.otf.common</groupId>
			<artifactId>resource-manager</artifactId>
			<exclusions>
				<exclusion>
					<groupId>org.ihtsdo.otf.common</groupId>
					<artifactId>common-domain</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.api-client</groupId>
					<artifactId>google-api-client</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.oauth-client</groupId>
					<artifactId>google-oauth-client-jetty</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.auth</groupId>
					<artifactId>google-auth-library-oauth2-http</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.apis</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>com.google.gdata</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Excel file handling -->
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<exclusions>
				<exclusion>
					<groupId>commons-codec</groupId>
					<artifactId>commons-codec</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.apache.logging.log4j</groupId>
					<artifactId>log4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
		</dependency>

		<dependency>
			<groupId>it.unimi.dsi</groupId>
			<artifactId>fastutil</artifactId>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
		</dependency>
		<dependency>
			<groupId>org.snomed.otf</groupId>
			<artifactId>snomed-boot</artifactId>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
		</dependency>

		<!-- Consul and Vault configuration services (optional) -->
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-consul-discovery</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-consul-config</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.cloud</groupId>
			<artifactId>spring-cloud-starter-vault-config</artifactId>
		</dependency>

		<!-- AWS auth -->
		<dependency>
			<groupId>io.github.acm19</groupId>
			<artifactId>aws-request-signing-apache-interceptor</artifactId>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>com.jayway.jsonpath</groupId>
					<artifactId>json-path</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<inherited>false</inherited>
				<configuration>
					<suppressionFiles>
						<suppressionFile>${project.basedir}/dependency-check-suppressions.xml</suppressionFile>
					</suppressionFiles>
					<!-- Disable .NET assembly analysis since this is a Java project -->
					<assemblyAnalyzerEnabled>false</assemblyAnalyzerEnabled>
					<!-- Fail build if CVSS score is 7.0 or higher (High/Critical severity) -->
					<failBuildOnCVSS>7.0</failBuildOnCVSS>
					<formats>
						<format>HTML</format>
						<format>JSON</format>
						<format>XML</format>
					</formats>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<mainClass>org.snomed.simplex.Application</mainClass>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>dev</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
		</profile>
		<profile>
			<id>prod</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-resources-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>copy-resources</id>
								<phase>process-classes</phase>
								<goals>
									<goal>copy-resources</goal>
								</goals>
								<configuration>
									<resources>
										<resource>
											<directory>../angular-ui/dist/simplex-ui/browser</directory>
										</resource>
									</resources>
									<outputDirectory>${basedir}/target/classes/static</outputDirectory>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.vafer</groupId>
						<artifactId>jdeb</artifactId>
						<version>1.1.1</version>
						<executions>
							<execution>
								<phase>package</phase>
								<goals>
									<goal>jdeb</goal>
								</goals>
								<configuration>
									<deb>${project.build.directory}/${packageName}-${project.version}-all.deb</deb>
									<controlDir>${basedir}/src/deb/control</controlDir>
									<snapshotExpand>true</snapshotExpand>
									<snapshotEnv>BUILD_NUMBER</snapshotEnv>
									<verbose>true</verbose>
									<classifier>all</classifier>
									<signPackage>false</signPackage>
									<dataSet>
										<data>
											<src>${project.build.directory}/${project.build.finalName}.jar</src>
											<dst>${packageName}.jar</dst>
											<type>file</type>
											<mapper>
												<type>perm</type>
												<prefix>/opt/${packageName}/</prefix>
											</mapper>
										</data>
										<data>
											<src>${basedir}/src/deb/supervisor.conf</src>
											<dst>/etc/supervisor/conf.d/${packageName}.conf</dst>
											<type>file</type>
										</data>
										<data>
											<src>${basedir}/../angular-ui/dist/simplex-ui/browser/index.html</src>
											<dst>/opt/${packageName}/web-override/index.html</dst>
											<type>file</type>
										</data>
									</dataSet>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>

